--- a/Kenia.mw
+++ b/Kenia.mw
@@ -420,9 +420,43 @@ Undanks dat der al groute trädte maked sint, steyt Kenia noch vöär een paar f
 
 Kenmarkende årmodeseektes sint ouk in Kenia wydverbreid: de hälvte van de kenianen leavet under de årmodegrense. Vöärkoambåre seektes, so as [[malaria]], HIV/AIDS, lungunstekking, diarree en undervoding sint belangryke kindermoordenaars. Dårnöäst sorget slecht beleid, [[umkeuperieje|ümköyperye]], inadekwate gesundheidswarkers, slecht behear en leiderskap vöär vöäle ellende. Volgens ne skatting uut 2009 had 6,3% van de vulwassenen HIV/AIDS.<ref>[https://www.cia.gov/library/publications/the-world-factbook/rankorder/2155rank.html?countryName=Kenya&countryCode=ke&regionCode=afr&rank=11#ke CIA World Factbook: HIV/AIDS – Adult Prevalence Rate Rankings]. Cia.gov. Bekeaken up 23 april 2012.</ref> Toch wist een UNAIDS-rapport van 2011 uut dat de HIV-epidemy händig-an wat verbettert. Minder junge lüde (tüsken 15 en 24 jår) en swangere vrouwlüde hebbet de seekte.<ref>[http://www.unaids.org/en/media/unaids/contentassets/documents/unaidspublication/2011/JC2216_WorldAIDSday_report_2011_en.pdf World AIDS Day Report 2011]. UNAIDS</ref> In [[2006]] wör rund de 15 miljoon mål malaria vünden.<ref>[http://www.who.int/malaria/publications/country-profiles/2009/mal2009_kenya_0025.pdf "Kenya"], p 111–113 in ''World Malaria report 2009''. WHO.</ref>
 
+===Vrouwlüde===
+[[File:Kenyan Women in Nairobi 01.jpg|thumb|Keniaanske vrouwlüde in Nairobi]]
+Keniaanske vrouwlüde kreagen in 2012 in döärsneyde 4,49 kinder.<ref>[https://www.google.com/publicdata/explore?ds=n4ff2muj8bh2a_&ctype=l&strail=false&bcs=d&nselm=h&met_y=TFR&fdim_y=scenario:1&scale_y=lin&ind_y=false&rdim=world&idim=country:KE&ifdim=world&tstart=1106895600000&tend=2842498800000  IFs Forecast – Version 7.00 – Google Public Data Explorer.] Bekeaken up 15 february 2015.</ref> Volgens een regeyringsundersöök uut 2008 was de vrüchtbårheidsgråd 4,6% en et gebruuk van vöärbehoodsmiddelen was 46%.<ref>[http://statistics.knbs.or.ke/nada/index.php/catalog/23 Kenya – Kenya Demographic and Health Survey 2008–09]. Kenya National Data Archive (KeNADA)</ref> Moderstarvte is houge, deyls döär [[vrouwenbesnydenis]], wat 27% van de vrouwlüde undergån hebbet.<ref>[http://www.who.int/reproductivehealth/topics/fgm/prevalence/en/|title=WHO – Female genital mutilation and other harmful practices.] Bekeaken up 15 february 2015.</ref> Döär modernisering wördt dit gebruuk vöärdan minder uutvoord. Dårnöäst wör et 2011 by wet verböäden.<ref>[https://www.theguardian.com/society/sarah-boseley-global-health/2011/sep/08/women-africa The Guardian.com. Boseley, Sarah. "FGM: Kenya acts against unkindest cut". Skreaven up 8 september 2011.</ref>
 
+Vöär de kolonisaty hadden vrouwlüde ne ekonomiske eygen seg. Döär koloniale landafname rakeden de vrouwlüde de seggenskap kwyt.<ref>[https://web.archive.org/web/20110111134944/http://www.cipe.org/essay/Women%27s%20participation%20in%20Kenyan%20Society%20-%20Claris%20Kariuki.pdf (Archiveerd) (PDF). Center for International Private Enterprise. "WOMEN'S PARTICIPATION IN THE KENYAN SOCIETY".] Bekeaken up 2 februåry 2018.</ref>
+
+De döärsneyde trouwleavtyd neamt eavenreydig to med underwysgråd.<ref>[https://dhsprogram.com/pubs/pdf/fr308/fr308.pdf Kenya National Bureau of Statistics. "Demographic and Health Survey 2014".] Bekeaken up 2 februåry 2018.</ref>
+
+Verkrachtig, misbruuk en mishandeling wordt nit altyd as misdåden seen.<ref>[https://ses.library.usyd.edu.au//bitstream/2123/15632/2/Kenya%20Summary.pdf (PDF) Sydney eScholarship Repository. MAKING JUSTICE WORK FOR WOMEN Kenya Country Report.] Bekeaken up 2 februåry 2018.</ref> Meldingen van seksueel misbruuk wordt nit altyd seriöös nöämen.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
+
+===Skolen===
+[[File:Community work in Kenya DVIDS342488.jpg|thumb|Skoolkinder in de klasse.]]
+
+[[File:MSc student at Kenyatta University.jpg|thumb|Ne MSc-student an de [[Kenyatta University]] in Nairobi.]]
+
+Tö vyv jår old köänet kinder når de vöärskoolse upvang. Dat duret eyne töt drey jår en wördt uut eygene sak betaald ümdat der töt vöär kört noch gin officiääl regeyringsbeleid vöär was.<ref>[http://www.standardmedia.co.ke/article/2000188257/government-to-review-early-childhood-development-policy Standardmedia.co.ke. "Government to review Early Childhood Development policy".] Bekeaken up 23 juni 2016.</ref>
+
+Vanaf ses jår kryget kinder les up de laegere skole. Dår sittet se acht jår en dårnå noch veer jår up de middelbåre skole. Underwys is gratis in oapenbåre skolen. Dår köänet se kesen vöär ne tweyjöärige warkrichte upleiding, of selv ne learwarksteyde regelen vöär kleydermaker, timmerman, automontöör of metselder.<ref>[http://kenyapage.net/education/primary.html Kenyapage.net. "Primary School Education in Kenya". bekeaken up 10 juni 2016.</ref>
+
+Dee wat de middelbåre skole afmaket köänet når ne techniske hougeskole of ander kollege vöär ne dreyjöärige upleiding, of medeyne döär når ne universiteit en dår veer jår studeren. Afstudeerden van de techniske upleidingen en kolleges köänet an et wark en later noch een diploma in een specialisme halen of når de universiteit. Dat doot se meysttyds nå et tweyde of darde jåren an de höygere skole. Een höyger diploma wördt döär de meyste warkgeavers aksepteerd.
+
+ Graduates from the polytechnics and colleges can then join the workforce and later obtain a specialized higher diploma qualification after a further one to two years of training, or join the university—usually in the second or third year of their respective course. The [[higher diploma]] is accepted by many employers in place of a bachelor's degree and direct or accelerated admission to post-graduate studies is possible in some universities.
+
+[[File:Masai girl at school doing maths.jpg|thumb|Een Maasai-meydken up skole.]]
+
+Keniaanske publike universiteiten sint slim verkommercialiseerd en mär een klein deyl van de kwalificeerde lüde med een diploma van de middelbåre skole kryget ne studyböörse van de regeyring. De meysten koamet in de geystesweatenskappen terechte ümdat dat goodkoup te understütten is. De meyste studenten dee in anmarking koamet mär nit tolåten wordet, keset vöär minder prominente lesryges in publike of private universiteiten, hougeskolen en techniske upleidingen.
+
+Van de keniaanske vulwassenen kan 38,5 percent nit (good) leysen of skryven.<ref>[http://www.eldis.org/go/home&id=31868&type=Document Eldis.org. "Kenya National Adult Literacy Survey report".] Bekeaken up 27 juni 2016.</ref> Der sint groute verskillen når strekke. In Nairobi is 87,1% leyskündig. In de Nooroustelike Provincy mär 8 percent. 
+
+Den vöärskoolsken upvang, vöär kinder tusken drey en vyv jår old, is verplicht üm tolåten te worden töt Standard One (de eyrste klasse). An et ende van de middelbåre skole kryget leyrlingen een landelik eksamen in acht väkke når köäse. Engelsk, Kiswahili en rekkenkünde sint verplicht. As se slaget, kryget se et Keniaanske Certifikaat vöär Laeger Underwys, wat bepålt wee når de middelbåre skole mag of når ne beroopsupleiding geyt. 
+
+De Keniaanske Centrale Plaatsingsdeenst vöär Universiteiten en Hougeskolen bepålt welke studenten by de publike universiteiten magt. Nöäst de publike skolen gevt et noch nen houp priveeskolen, vöärnamelik in städelike gebeyden. Wydters sint der noch een antal internationale skolen dee verskillende butenlandske underwysstelsels volget.
+
+Undanks de kommerciäle benöädering is Kenia's höygere upleidingsstelsel berücht star en steyt wyd af van wat der nöydig is up de lokale arbeidsmarkt. Der besteyt vöäle unvreade oaver de untopasbårheid van de kennis dee afstudeerden hebbet.<ref>[http://www.businessdailyafrica.com/news/Varsity-expansion-blamed-for-half-baked-graduates/539546-3354256-108r90o/index.html Businessdailyafrica.com. "Varsity expansion blamed for half-baked graduates".]</ref>
+
 
 [[en:Kenya]]
 [[nl:Kenia]]
