--- a/Kenia.mw
+++ b/Kenia.mw
@@ -443,8 +443,6 @@ Vanaf ses jår kryget kinder les up de laegere skole. Dår sittet se acht jår e
 
 Dee wat de middelbåre skole afmaket köänet når ne techniske hougeskole of ander kollege vöär ne dreyjöärige upleiding, of medeyne döär når ne universiteit en dår veer jår studeren. Afstudeerden van de techniske upleidingen en kolleges köänet an et wark en later noch een diploma in een specialisme halen of når de universiteit. Dat doot se meysttyds nå et tweyde of darde jåren an de höygere skole. Een höyger diploma wördt döär de meyste warkgeavers aksepteerd.
 
- Graduates from the polytechnics and colleges can then join the workforce and later obtain a specialized higher diploma qualification after a further one to two years of training, or join the university—usually in the second or third year of their respective course. The [[higher diploma]] is accepted by many employers in place of a bachelor's degree and direct or accelerated admission to post-graduate studies is possible in some universities.
-
 [[File:Masai girl at school doing maths.jpg|thumb|Een Maasai-meydken up skole.]]
 
 Keniaanske publike universiteiten sint slim verkommercialiseerd en mär een klein deyl van de kwalificeerde lüde med een diploma van de middelbåre skole kryget ne studyböörse van de regeyring. De meysten koamet in de geystesweatenskappen terechte ümdat dat goodkoup te understütten is. De meyste studenten dee in anmarking koamet mär nit tolåten wordet, keset vöär minder prominente lesryges in publike of private universiteiten, hougeskolen en techniske upleidingen.
@@ -457,6 +455,7 @@ De Keniaanske Centrale Plaatsingsdeenst vöär Universiteiten en Hougeskolen bep
 
 Undanks de kommerciäle benöädering is Kenia's höygere upleidingsstelsel berücht star en steyt wyd af van wat der nöydig is up de lokale arbeidsmarkt. Der besteyt vöäle unvreade oaver de untopasbårheid van de kennis dee afstudeerden hebbet.<ref>[http://www.businessdailyafrica.com/news/Varsity-expansion-blamed-for-half-baked-graduates/539546-3354256-108r90o/index.html Businessdailyafrica.com. "Varsity expansion blamed for half-baked graduates".]</ref>
 
+== Brunnen ==
 
 [[en:Kenya]]
 [[nl:Kenia]]
