--- a/Kenia.mw
+++ b/Kenia.mw
@@ -449,7 +449,7 @@ Keniaanske publike universiteiten sint slim verkommercialiseerd en mär een klei
 
 Van de keniaanske vulwassenen kan 38,5 percent nit (good) leysen of skryven.<ref>[http://www.eldis.org/go/home&id=31868&type=Document Eldis.org. "Kenya National Adult Literacy Survey report".] Bekeaken up 27 juni 2016.</ref> Der sint groute verskillen når strekke. In Nairobi is 87,1% leyskündig. In de Nooroustelike Provincy mär 8 percent. 
 
-Den vöärskoolsken upvang, vöär kinder tusken drey en vyv jår old, is verplicht üm tolåten te worden töt Standard One (de eyrste klasse). An et ende van de middelbåre skole kryget leyrlingen een landelik eksamen in acht väkke når köäse. Engelsk, Kiswahili en rekkenkünde sint verplicht. As se slaget, kryget se et Keniaanske Certifikaat vöär Laeger Underwys, wat bepålt wee når de middelbåre skole mag of når ne beroopsupleiding geyt. 
+Den vöärskoolsken upvang, vöär kinder tusken drey en vyv jår old, is verplicht üm tolåten te worden töt Standard One (de eyrste klasse). As se slaget, kryget se et Keniaanske Certifikaat vöär Laeger Underwys, wat bepålt wee når de middelbåre skole mag of når ne beroopsupleiding geyt. An et ende van de middelbåre skole kryget leyrlingen een landelik eksamen in acht väkke når köäse. Engelsk, Kiswahili en rekkenkünde sint verplicht.
 
 De Keniaanske Centrale Plaatsingsdeenst vöär Universiteiten en Hougeskolen bepålt welke studenten by de publike universiteiten magt. Nöäst de publike skolen gevt et noch nen houp priveeskolen, vöärnamelik in städelike gebeyden. Wydters sint der noch een antal internationale skolen dee verskillende butenlandske underwysstelsels volget.
 
