*Empty MediaWiki Message*

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -455,6 +455,57 @@ De Keniaanske Centrale Plaatsingsdeenst vöär Universiteiten en Hougeskolen bep
 
 Undanks de kommerciäle benöädering is Kenia's höygere upleidingsstelsel berücht star en steyt wyd af van wat der nöydig is up de lokale arbeidsmarkt. Der besteyt vöäle unvreade oaver de untopasbårheid van de kennis dee afstudeerden hebbet.<ref>[http://www.businessdailyafrica.com/news/Varsity-expansion-blamed-for-half-baked-graduates/539546-3354256-108r90o/index.html Businessdailyafrica.com. "Varsity expansion blamed for half-baked graduates".]</ref>
 
+== Kultuur ==
+
+[[File:Kenyan dancers.jpg|thumb|Keniaanske kinder voort nen traditionelen dans uut]]
+[[File:Nation media house.jpg|thumb|De [[Nation Media Group]] sit in et Nation Media House]]
+
+De keniaanske kultuur besteyt uut meyrdere traditys. Ümdat der verskillende volker in Kenia leavet, is der ginne eyndüdig keniaanske kultuur an te wysen. 
+
+De meyrderheid besteyt uut Swahili-lüde an de küste en verskillende bantuvolker in et midden en westen. In et noordwesten woanet vöärnamelik nilotiske volker. De [[Maasai (volk)|Maasai]] sint een bekend volk döär tourisme, mär se vörmet mär een klein deel van de heyle bevolking. Se sint bekend üm öäre uutvorige boavenkleyder en [[opsmuk|upsmük]].
+
+Ouk hevt Kenia een uutebreid musik-, televisy- en teaterweasen. 
+
+===Media===
+Kenia hevt een antal mediakanalen dee as binnenlandsk en wearldwyd uutsendet. See behandelt et nys, sakengeböären, sport en vermaak.
+De belangrykste keniaanske kranten sint under meyr:
+
+*  ''[[Daily Nation|The Daily Nation]]'';
+*  ''[[The Standard (Kenya)|The Standard]]''
+*  ''The Star''
+*  ''The People''
+*  ''East Africa Weekly''
+*  ''[[Taifa Leo]]''
+
+Keniaanske televisystations sint under meyr:
+* [[Kenya Broadcasting Corporation]] (KBC)
+* [[Citizen TV]]
+* [[Kenya Television Network]] (KTN)
+* [[NTV (Kenya)|NTV]]
+*  Kiss Television
+* [[K24 (Kenya)|K24 Television]]
+*  Kass-TV
+
+===Skryverye===
+[[File:Ngũgĩ wa Thiong'o (signing autographs in London).jpg|thumb|Den keniaansken skryver [[Ngũgĩ wa Thiong'o]].]]
+
+[[Ngũgĩ wa Thiong'o]] is eyne van de bekendste skryvers van Kenia. Syn book ''[[Weep Not, Child]]'' (''Stille mär myn kind'') gevt ne beskryving van et leaven in Kenia under britske oaverhearsking. Et verhaal löt seen wo as de Mau Mau-upstand et leaven van kenianen beïnvloded hevt. De thema's in et book, [[kolonialisme]], underwys en leevde, maket et eyne van de bekendste afrikaanske böker.
+
+[[M.G. Vassanji]]'s book uut 2003, ''The In-Between World of Vikram Lall'' (''De tüskenwearld van Vikram Lall'') wün de [[Scotiabank Giller Prize|Giller Prize]] in 2003. Et is een fiktyf dagbook van nen keniaan med indiaske wörtel en syne family, terwyl as se proberet ümme te gån med de politike veranderingen in vöär- en nå-koloniaal Kenia. 
+
+Seyt 2003 besteyt der een literaer tydskrivt ''[[Kwani?]]'' oaver hüdigendaagse keniaanske literatuur.
+
+===Musik=== 
+[[File:Juacali 2.jpg|thumb|Den populaeren keniaansken musikant [[Jua Cali]].]]
+
+Kenia hevt een breyd musikaal anbod, boavenup de meyrdere soorten volksmusik dee meysttyds med de meyr as 40 lokale språken in verband eseen wordet.<ref>[http://www.wipo.int/wipo_magazine/en/2007/04/article_0001.html On the Beat – Tapping the Potential of Kenya's Music Industry], [[WIPO]] Magazine (juli 2007).</ref>
+
+[[Drums|Trummen]] sint et vöärnaamste musikinstrument in keniaanske popmusik. De trumritmes sint ingewikkeld en beståt vake uut beide inheymske en importeerde ritmes, vöärnamelik et [[Demokratiese republiek van de Kongo|Kongolese]] [[cavacha]]-ritme. In keniaanske popmusik wordt meyrdere deylen med mekander afwesseld en hebbet de lätste tyd ouk vaker upvallerige gitaarsolo's. Wyders sint [[hiphop]] en lokale genres as [[benga]] populaer.
+ 
+Teksten wordet meysttyds in kiswahili of engelsk esüngen. Med toneamende regelmåt wordet ouk [[lingala (språke)|lingala]]-elementen gebruked, eleynd van kongolese musikanten. Der wordt ouk wal teksten in lokale språken eskreaven, mär gröttere radiostations drayet meysttyds alleyne engelske musik. Toch sint der wal wat lokale radiostations dee lokaal wark drayet.
+
+Nen slim uutbündigen dans is de isukuti, dee vöäral döär de verskillende [[Luhya (volk)|Luhya]]-stammen edansed wördt by geleygenheden as geboortes, trouweryen en groves. Andere traditionele dansen sint under meyr de [[Ohangla]] van de [[Luo (volk)|Luo]], [[Nzele]] van de [[Midjikenda (volk)|Midjikenda]], [[Mugithi]] van de [[Kikuyu (volk)|Kikuyu]] en de [[taarab]] van de swahili.
+
 == Brunnen ==
 
 [[en:Kenya]]
