*Empty MediaWiki Message*

--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -3,7 +3,7 @@ De '''roggemoder''' of (in [[Grunnen (provìnzie)|Grönningen]] en [[Drenthe|Noa
 
 Kinder wördden ewårschouwed neet et veld in te loupen, ümdät anders de roggemoder hear sol grypen en midneamen. As in een koarenveld de [[halm|halmen]] anders beweyget as dät y verwachten sol, wördden wal edocht dät et neet döär de wind kwamt, mar döär de roggemoder.
 
-Alhowal et verhaal van de roggemoder kinder dervan wearhölled üm in et koaren te spöälen, gelöyveden ouk heyl wat vulwassenen in de roggemoder. De roggemoder pakte ja wal is een [[aor (bluiwieze)|år]] beat, sodät de korrels swart en giftig wördden. Sülksoort wokering nömet se [[moederkoorn|moderkoarn]]
+Alhowal et verhaal van de roggemoder kinder dervan wearhölled üm in et koaren te spöälen, gelöyveden ouk heyl wat vulwassenen in de roggemoder. De roggemoder pakkeden ja wal is een [[aor (bluiwieze)|år]] beat, sodät de korrels swart en giftig wördden. Sülksoort wokering nömet se [[moederkoorn|moderkoarn]]
 en de korrels (in et [[Drèents|drentsk]]) krèeikörrels.
 
 In een older gedöänte is et wyv een vegetaty-geyst. De kracht dee et gewas düt gröien. En as y der neet med gepaste gebrüken mid ümme gåt, heb y geyn gode ougst.
