/* Swahilikultuur en handel (1. – 19. eyw) */

--- a/Kenia.mw
+++ b/Kenia.mw
@@ -64,7 +64,7 @@ Al längere tyd was de keniaanske küste een huus vöär grupen metaalbewarkers 
 
 Teagen et 1. jårhunderd gungen stadståten as [[Mombasa]], [[Malindi]] en [[Zanzibar]] handelsbunden an med [[Arabyren (volk)|Arabyren]]. Hyrdöär gröiden de ekonomien, wör de [[islam]] introduceerd en kreyg de swahili-bantuspråke vöäle arabiske trekken. De swahili-stadståten vörmden een  handelsnetwark.<ref>[http://www.swahilihub.com/JifunzeKiswahili/-/1306806/1333292/-/jbyx02z/-/index.html Swahilihub.com. "History and Origin of Swahili – Jifunze Kiswahili". Bekeaken up 17 juli 2016.</ref><ref>Don Nanjira, Daniel (2010) [https://books.google.com/books?id=LZuxGsXVPoMC&printsec=frontcover ''African Foreign Policy and Diplomacy: From Antiquity to the 21st century''], ABC-CLIO, p. 114. ISBN 0-313-37982-3.</ref> Vöäle geskydkündigen meynden lange tyd dat de stadståten stichted warren dÖär arabiske of persiske handelslüde, mär upgraevingen wyset dat de stadståten inheymsk begünnen en dat se undanks butenmarksk inwark toch in grundbeginsel bantu warren.<ref>Spear, Thomas (2000)."Early Swahili History Reconsidered." The International Journal of African Historical Studies. vol 33, is 2. p257–290. jstor: 220649. Doi 10.2307/220649.</ref>
 
-Et [[Sultanaat van Kilwa]] was een middeleywsk [[sultanaat]] rund [[Kilwa Kisiwani]] in et hüdige [[Tanzania]]. In de beste dage güng dat oaver de heyle swahiliküste, med Kenia der by in. Der wördt beweyrd dat et in et 10. jårhunderd sticht wör döär ]]Ali ibn al-Hassan Shirazi]]<ref>شاكر مصطفى, ''موسوعة دوال العالم الأسلامي ورجالها الجزء الثالث'', (دار العلم للملايين: 1993), p. 1360</ref> nen persisken sultan uut [[Shiraz]] in süüd-Iran.<ref>Hastings, James (2003) ''Encyclopedia of Religion and Ethics Part 24'', Kessinger Publishing, p. 847</ref> Toch beweyret gelearden dat de Swahili de verhalen oaver arabisken of persisken oorsprung versünnen hadden üm öäre oaverhearsking good te küren.<ref>[https://www.britishmuseum.org/pdf/SwahiliCoast_TeachersNotes.pdf British Museum. "The wealth of Africa The Swahili Coast."] Bekeaken up 7 June 2017.</ref><ref>[https://www.thoughtco.com/swahili-culture-guide-171638 K. Kris Hirst. "Swahili Culture Guide – The Rise and Fall of Swahili States."] 12 February 2017. Bekeaken up 10 juni 2017.</ref> 
+Et [[Sultanaat van Kilwa]] was een middeleywsk [[sultanaat]] rund [[Kilwa Kisiwani]] in et hüdige [[Tanzania]]. In de beste dage güng dat oaver de heyle swahiliküste, med Kenia der by in. Der wördt beweyrd dat et in et 10. jårhunderd sticht wör döär [[Ali ibn al-Hassan Shirazi]]<ref>شاكر مصطفى, ''موسوعة دوال العالم الأسلامي ورجالها الجزء الثالث'', (دار العلم للملايين: 1993), p. 1360</ref> nen persisken sultan uut [[Shiraz]] in süüd-Iran.<ref>Hastings, James (2003) ''Encyclopedia of Religion and Ethics Part 24'', Kessinger Publishing, p. 847</ref> Toch beweyret gelearden dat de Swahili de verhalen oaver arabisken of persisken oorsprung versünnen hadden üm öäre oaverhearsking good te küren.<ref>[https://www.britishmuseum.org/pdf/SwahiliCoast_TeachersNotes.pdf British Museum. "The wealth of Africa The Swahili Coast."] Bekeaken up 7 June 2017.</ref><ref>[https://www.thoughtco.com/swahili-culture-guide-171638 K. Kris Hirst. "Swahili Culture Guide – The Rise and Fall of Swahili States."] 12 February 2017. Bekeaken up 10 juni 2017.</ref> 
 Vanaf et 10. jårhunderd begünnen de hearskers van Kilwa med groute moskeen te bowen en koaperen münten te gebruken.<ref>[https://books.google.com/books?id=kVwhcDDhHQkC&printsec=frontcover Nicolini, Beatrice and Watson, Penelope-Jane (2004). ''Makran, Oman, and Zanzibar'', Volume 3 van Islam in Africa, BRILL, p. 62] ISBN 90-04-13780-7.</ref>
 
 [[File:British Museum Kilwa pot sherds.jpg|thumb|Potskarven uut et [[Sultanaat van Kilwa]], sticht in et 10. jårhunderd döär den [[Persen (volk)|persisken]] sultan [[Ali ibn al-Hassan Shirazi]].]]
