--- a/Nairobi.mw
+++ b/Nairobi.mw
@@ -1,10 +1,10 @@
 [[File:Nairobi cityscape.jpg|thumb|right|200px|Stadsansicht van Nairobi]]
 
-'''Nairobi''' is de höyvdstad en gröätste stad van et oustafrikaanske land [[Kenia]]. de naam kümt uut et [[Masai]] ''Enkare Nairobi'' en bedüdet ''kule waters''. De stad ligt in et midden-süden van Kenia an de rivier de [[Nairobi (rivier)|Nairobi]]. Et beslöt ne uppervlakte van ungeveyr 693 km², wårup in 2011 ungeveyr 3.363.000 lüde woanden. 
+'''Nairobi''' is de höyvdstad en gröytste stad van et oustafrikaanske land [[Kenia]]. De name kümt uut et [[masai]] ''Enkare Nairobi'' en bedüdet ''kule waters''. De stad ligt in et midden-süden van Kenia an de rivyr de [[Nairobi (rivier)|Nairobi]]. Et beslöt ne uppervlakde van ungevear 693 km², wårup in 2011 ungevear 3.363.000 lüde woanden. 
 
-Nairobi ligt up ne höygte van 1795 meater, wårmed as et up [[Addis Abeba]] en [[Asmara]] nå de höygst eleygen höyvdstad van Afrika is.
+Nairobi ligt up ne höygte van 1795 meter, wårmed as et up [[Addis Abeba]] en [[Asmara]] nå de höygst eleagen höyvdstad van Afrika is.
 
-Nöäst de officiäle landsspråken [[engels]]k en ki[[swahili]] küret vöäle lüde in Nairobi ouk [[Kikuyu (språke)|Kikuyu]].
+Nöäst de officiele landsspråken [[engels]]k en ki[[swahili]] küret vöäle lüde in Nairobi ouk [[Kikuyu (språke)|kikuyu]].
 
 ==Fotoryge==
 <gallery>
