--- a/Blauwbloem.mw
+++ b/Blauwbloem.mw
@@ -24,6 +24,7 @@ De [[voot|voet]] van de buisbloempjes is paors. Een plant kan wel tot 20 bloemen
 <gallery>
 Image:CentaureaCyanus-overz-kl.jpg
 Image:CentaureaCyanus-bloem-kl.jpg
+Centaurea cyanus - Keila.jpg|
 </gallery>
 
 {{Commons|Centaurea cyanus}}
