--- a/Markermeer.mw
+++ b/Markermeer.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Zuiderzeewerken-NL.png|thumb|250px|Een kaorte van et gebied om et Markermeer hinne.]]
-Et '''Markermeer''' (ok wel: ''Hoornse Poolder'' of ''Zudelik Iesselmeer'') is een groot meer van omdebi'j 700 vierkaante kilemeter. Et meer leit tussen [[Noord-Hollaand]], [[Flevolaand]] en et (Noordelike) [[Iesselmeer]] in. Op de meerste plakken het et meer een diepte tussen de twie en vier meter. Et meer is vernuumd naor et schiereilaand [[Marken]], dat in et zuudwesten van et meer leit.
+Het '''Markermeer''' (ook wel: ''Hoornse Poolder'' of ''Zudelik Ijsselmeer'') is een groot meer van omdebi'j 700 vierkante kilometer. Het meer ligt tussen [[Noord-Hollaand]], [[Flevolaand]] en et (Noordelike) [[Iesselmeer]] in. Op de meeste plakken het et meer een diepte tussen de twee en vier meter. Et meer is vernuumd naar et schiereiland [[Marken]], dat in et zuidwesten van et meer ligt.
 
 Eerst weren der plannen om et meer in te poolderen in et ruum van de [[Zuderzeewarken]], mar die plannen bin stopzet. Omdat et Iesselmeer en et Markermeer overbliefsels bin van de [[Zuderzee]] en de meren eins een gehiel vormen is et Zudelik Iesselmeer een betere naeme veur et meer.
 
