--- a/Nedersaksische_sagen_en_legendes.mw
+++ b/Nedersaksische_sagen_en_legendes.mw
@@ -66,7 +66,7 @@ As ien dag Brammert van huus is, vrag Ellert an 't maagien um hum te scheren. Mi
 De sage hef een internationaol bekend motief, det van de roversalarmbelle. Ellert en Brammert staot mangs ok bekend as vader en zeun. Heur huus zol een ondergronds hol op 't [[Ellertsveld]] ewest hebben. Partie vertelt d'rbi'j det Ellert en Brammert [[hunebed]]bouwers waren. Op 't Ellertsveld lig ok de (grotendiels of-egraven) [[Brammershoop]]. De Encyclopedie Drenthe Online schrif det 't Ellertsveld en de Brammershoop vernuumd bint naor de rovers<ref>[http://www.encyclopediedrenthe.nl/Brammershoop Encyclopedie Drenthe Online: Brammershoop]</ref>; volgens de onderzuker van volksverhalen [[Ruben Koman]] bint de namen van de rovers waorschienlijk uuteprakkezeerd naor anleiding van de niet meer begrepen eerdriekskundige namen Ellertsveld en Brammershoop.<ref>Ruben A. Koman (2008), ''Ellert en Brammert: een reuzenclaim van een 'Drents' roversverhaal'', Beem: Profiel.</ref>
 
 ==[[Grunnen (provìnzie)|Grönnen]]==
-[[Ofbeelding:Nicolaaskerk Onstwedde.jpg|left|250px|thumb|t Kèrkie mit de juvvertoren van [[Onswedde]] ]]
+[[Ofbeelding:20190827 Nicolaaskerk1 Onstwedde.jpg|left|250px|thumb|t Kèrkie mit de juvvertoren van [[Onswedde]] ]]
 ===De [[juvvertoren]]s - [[Onswedde]], [[Schewôlde]], [[Holwerd (Delfziel)|Holwerd]]===
 In Onswedde en Schewôlde stoan kèrktoren dij ook wel de ''juvvertorens'' nuimd worden. t Verhoal gaait dat der ais drij rieke zusters wazzen dij n geweldeg leven haren van feesten en daansen mit nkander. Op n dag zaggen zai in dat dit leven nait zo idioal was en dat dizze wieze van leven heur nait voldee. Doarom besloten zai heur leven tou beteren. De zusters, dij heur haile leven nait van nkander schaaiden wèst wazzen, gongen nou elk heur aigen wèg en op stee van aankomst n toren tou baauwen om God tou eren. Torens mozzen aal drijent liek wezen. Aine zuster kwam in Holwerd. Aander kwam in Schewôlde en daarde kwam in Onswedde. Doar luiten zai de torens baauwen, dij van wied boven t dörp uut tou zain binnen. Dijent van Holwerd is der noudoags nait meer.
 
