*Empty MediaWiki Message*

--- a/Indisken_Oceaan.mw
+++ b/Indisken_Oceaan.mw
@@ -1,6 +1,6 @@
 [[File:Indianocean.PNG|thumb|right|350px|Kaarte van den Indisken Oceaan]]
 
-Den '''Indisken Oceaan''' is ne [[water]]massa tüsken de [[wearlddeel|wearlddeylen]] [[Afrika]], [[Azië|Asie]] en [[Australië|Australie]]. In et süden geyt he oaver in den [[Südeliken Oceaan]]. De name hevt he te danken an et [[India|indiske skeereiland]], wat der sowat in syn geheyl döär ümslöäten wördt. Med ne uppervlakte van 73.556.000 km² is et den up twey nå gröätsten oceaan van de wearld en neamt 20% van et totale wateruppervlak in.
+Den '''Indisken Oceaan''' is ne [[water]]massa tüsken de [[wearlddeel|wearlddeylen]] [[Afrika]], [[Azië|Asie]] en [[Australië|Australie]]. In et süden geyt he oaver in den [[Südeliken Oceaan]]. De name hevt he te danken an et [[India|indiske skeereiland]], wat der sowat in syn geheyl döär ümslöäten wördt. Med ne uppervlakte van 73.556.000 km² is et den up twey nå gröätsten oceaan van de wearld en neamt he 20% van et totale wateruppervlak in.
 
 In döärsneyde is den Indisken Oceaan 3963 meter depe. Up syn deepst is he 7725 meter.
 
