--- a/Ee_(gemeente).mw
+++ b/Ee_(gemeente).mw
@@ -1,7 +1,7 @@
 {{Gemeente |
 naam = Ee |
-bestaansnaam vlagge = Vlag van Ede.png|
-bestaansnaam wapen = WaopenEde.gif |
+bestaansnaam vlagge = Flag of Ede.svg |
+bestaansnaam wapen = Coat of arms of Ede.svg |
 lokasie = LocatieEde |
 previnsie = [[Gelderlaand]] |
 heufplaose = [[Ee (stad)|Ee]] | 
