*Empty MediaWiki Message*

--- a/Willem_van_Oranje.mw
+++ b/Willem_van_Oranje.mw
@@ -1,4 +1,4 @@
-'''DIKE Willem van Oranje-Nassau''' ([[Dillenburg]], [[24 april]] [[1533]] — [[Delft]], [[10 juli]] [[1584]]), [[Prins van Oranje (titel)|Prins van Oranje]], [[Graof]] van [[Nassau]], bekend äs '''Willem van Oranje''', was de initiatiefnemer en leider van [[Tachtigjaorige Oorlog|de Opstand]] tegen de [[Spanje|Spaanse]] [[Könning (titel)|koning]] [[Filips II van Spanje|Filips II]].
+'''Willem van Oranje-Nassau''' ([[Dillenburg]], [[24 april]] [[1533]] — [[Delft]], [[10 juli]] [[1584]]), [[Prins van Oranje (titel)|Prins van Oranje]], [[Graof]] van [[Nassau]], bekend äs '''Willem van Oranje''', was de initiatiefnemer en leider van [[Tachtigjaorige Oorlog|de Opstand]] tegen de [[Spanje|Spaanse]] [[Könning (titel)|koning]] [[Filips II van Spanje|Filips II]].
 
 De Opstand steet in de geschiedenisboeken bekend äs de [[Tachtigjarige Oorlog]] en leiden tot een onofhankelijk [[Nederlaand]]. In de kronieken, brieven en dokementen van de [[16e eeuw]] wordt der soms esproken aover de Opstand. In de [[letterkunde|literetuur]] van vandage wordt 't begin van de Tachtigjaorige Oorlog vake an-eduud mit ''de Opstand'' of ''de Nederlaanse Opstand''.
 
