([[c:GR|GR]]) [[c:COM:Duplicate|Duplicate]]: [[File:Avicii SVG Logo.svg]] → [[File:Avicii logo.svg]] Exact or scaled-down duplicate: [[c::File:Avicii logo.svg]]

--- a/Avicii.mw
+++ b/Avicii.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Avicii_SVG_Logo.svg|thumb|t Beeldmark van Avicii]]
+[[Bestaand:Avicii logo.svg|thumb|t Beeldmark van Avicii]]
 [[Bestaand:Avicii @ London tentparty (cropped).jpg|thumb|Avicii]]
 [[Bestaand:Avicii.jpg|thumb|Avicii]]
 '''Avicii''' is de artiestennaam van '''Tim Bergling''' ([[Stockholm]], [[8 september]] [[1989]]-[[Maskat]], [[20 april]] [[2018]]), n [[Sveden|Zweedse]] [[plaotjesdreier]], [[remix]]er en [[muziek]]produsent. Hij steet oek bekend as '''Tim Berg''' en '''Tom Hangs'''. Hij kreeg internasionale bekendheid mit t liedjen ''Bromance'' en hef sinds die tied mit de albums ''Levels'' en ''Wake Me Up!'' grote suksessen behaold.
